force-app/main/default/objects/Attorney__c/Attorney__c.object-meta.xml
<CustomObject>
    <description>A person to whom decision making is delegated via a power of attorney (POA) agreement.</description>
    <label>Attorney</label>
    <nameField>
        <displayFormat>ATT-{00000}</displayFormat>
        <label>Attorney number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attorneys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>