force-app/main/default/objects/Attorney__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The person to whom decision making responsibilities have been delegated</description>
    <inlineHelpText>The person to whom decision making responsibilities have been delegated</inlineHelpText>
    <label>Attorney</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attorneys</relationshipLabel>
    <relationshipName>Attorneys</relationshipName>
    <type>Lookup</type>
</CustomField>