force-app/main/default/objects/Attorney__c/fields/PowerOfAttorney__c.field-meta.xml
<CustomField>
    <fullName>PowerOfAttorney__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The document granting this attorney decision making abilities</description>
    <inlineHelpText>The document granting this attorney decision making abilities</inlineHelpText>
    <label>Power of attorney</label>
    <referenceTo>PowerOfAttorney__c</referenceTo>
    <relationshipLabel>Attorneys</relationshipLabel>
    <relationshipName>Attorneys</relationshipName>
    <type>Lookup</type>
</CustomField>