force-app/main/default/objects/Attorney__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates whether this person is an active attorney on this POA, someone formerly registered on it, or a replacement.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>REPLACEMENT</fullName>
                <label>Replacement</label>
            </value>
            <value>
                <fullName>REMOVED</fullName>
                <label>Removed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>